[gd_scene load_steps=13 format=2]

[ext_resource path="res://menu/Background2D/2DBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://status_bar/StatusBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font/ethnocentric rg.tres" type="DynamicFontData" id=3]
[ext_resource path="res://theme/blue_button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/font/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://theme/blue_button.tres" type="StyleBox" id=6]
[ext_resource path="res://theme/CustomTheme.tres" type="Theme" id=7]
[ext_resource path="res://wallet/TransactionList.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="TransactionList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 8 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="StatusBar" parent="." instance=ExtResource( 2 )]

[node name="CopiedLabel" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 50 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Copied!"
align = 1

[node name="Vbox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -750.0
margin_top = -462.5
margin_right = 750.0
margin_bottom = 462.5
mouse_filter = 2
size_flags_horizontal = 5
custom_constants/separation = 25
alignment = 1

[node name="CC" type="CenterContainer" parent="Vbox"]
margin_top = 50.0
margin_right = 1500.0
margin_bottom = 700.0
rect_min_size = Vector2( 1000, 650 )

[node name="EmptyLabel" type="Label" parent="Vbox/CC"]
visible = false
margin_left = 316.0
margin_top = 275.0
margin_right = 1184.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "No transactions"
align = 1

[node name="Tree" type="Tree" parent="Vbox/CC"]
margin_top = 50.0
margin_right = 1500.0
margin_bottom = 600.0
rect_min_size = Vector2( 1500, 550 )
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_constants/vseparation = 35
custom_fonts/title_button_font = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
custom_styles/button_pressed = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
columns = 6
column_titles_visible = true
hide_root = true
select_mode = 1

[node name="Hbox" type="HBoxContainer" parent="Vbox"]
margin_left = 300.0
margin_top = 725.0
margin_right = 1200.0
margin_bottom = 875.0
mouse_filter = 2
size_flags_horizontal = 4
custom_constants/separation = 100
alignment = 1

[node name="PreviousBtn" type="Button" parent="Vbox/Hbox"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "<"

[node name="NextBtn" type="Button" parent="Vbox/Hbox"]
margin_left = 250.0
margin_right = 400.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = ">"

[node name="BackButton" type="Button" parent="Vbox/Hbox"]
margin_left = 500.0
margin_right = 900.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "Back"

[connection signal="button_pressed" from="Vbox/CC/Tree" to="." method="_on_Tree_button_pressed"]
[connection signal="column_title_pressed" from="Vbox/CC/Tree" to="." method="_on_Tree_column_title_pressed"]
[connection signal="pressed" from="Vbox/Hbox/PreviousBtn" to="." method="_on_PreviousBtn_pressed"]
[connection signal="pressed" from="Vbox/Hbox/NextBtn" to="." method="_on_NextBtn_pressed"]
[connection signal="pressed" from="Vbox/Hbox/BackButton" to="." method="_on_BackButton_pressed"]
